classDiagram
    class Player {
        -vector~Territory*~ territories
        -Hand* handOfCards
        -OrdersList* orders
        +Player()
        +Player(const Player& other)
        +operator=(const Player& other)
        +~Player()
        +toDefend() vector~Territory*~
        +toAttack() vector~Territory*~
        +issueOrder() void
        +getHandOfCards() Hand*
    }

    class Territory {
        -string name
        -int id
        -int continentId
        -int ownerId
        -int armies
        -int x
        -int y
        -unordered_set~int~ adjacentIds
        +Territory(const string& name, int id, int continentId, int x, int y)
        +Territory(const Territory& other)
        +operator=(const Territory& other)
        +~Territory()
        +getName() string
        +getId() int
        +getContinentId() int
        +getOwnerId() int
        +getArmies() int
        +getX() int
        +getY() int
        +getAdjacentIds() unordered_set~int~&
        +addAdjacentTerritory(int territoryId) void
        +setOwner(int playerId) void
        +setArmies(int armyCount) void
    }

    class Continent {
        -string name
        -int id
        -int bonusValue
        -unordered_set~int~ territoryIds
        +Continent(const string& name, int id, int bonusValue)
        +Continent(const Continent& other)
        +operator=(const Continent& other)
        +~Continent()
        +getName() string
        +getId() int
        +getBonusValue() int
        +getTerritoryIds() unordered_set~int~&
        +addTerritory(int territoryId) void
        +setBonusValue(int bonus) void
    }

    class Map {
        -vector~Territory~ territories
        -vector~Continent~ continents
        -unordered_map~string,int~ territoryNameToId
        -unordered_map~int,int~ continentIdToIndex
        -unordered_map~string,int~ continentNameToId
        +Map()
        +Map(const Map& other)
        +operator=(const Map& other)
        +~Map()
        +addTerritory(const Territory& t) void
        +getTerritoryByName(const string& name) Territory*
        +getTerritoryById(int id) Territory*
        +getTerritoryByIndex(int idx) Territory*
        +getTerritoriesSize() int
        +addContinent(const Continent& c) void
        +getContinentById(int id) Continent*
        +getContinentByName(const string& name) Continent*
        +getContinentByIndex(int idx) Continent*
        +getContinentsSize() int
        +validate() bool
        +isConnectedGraph() bool
        +validateContinents() bool
        +validateTerritoryMembership() bool
        +printMapStatistics() void
    }

    class MapLoader {
        +MapLoader()
        +MapLoader(const MapLoader& other)
        +~MapLoader()
        +loadMap(const string& filename) Map*
        +handleCurrentState(Section currentState, const string& line, Map* map) Map*
        +getSectionFromHeader(const string& line) Section
    }

    %% Relationships
    Player "1" --> "*" Territory : owns
    Map "1" --> "*" Territory : contains
    Map "1" --> "*" Continent : contains
    Continent "1" --> "*" Territory : contains
    Territory "*" --> "*" Territory : adjacent to
    MapLoader --> Map : creates
